Revision history for Module::Provision

0.17.6    2013-06-28 20:53:45
          - Prove now runs individual test scripts
          - Added set_branch
          - Mooified

0.16.3    2013-06-25 16:26:24
          - Commit msg hook prefers message file content

0.15.10   2013-05-23 23:02:32
          - Better version diff in ::PrereqDiffereces
          - Fixed bug ::PrereqDifference::_consolidate
          - Updated ::Base POD
          - Enhanced CPAN Testing exception method
          - Simplified ::Base::chdir
          - Bumped Class::Usul version
          - Renamed C::U::Functions say to emit
          - Added requires to ::CPANDists
          - Added password encryption to ::CPANDists
          - Combined CPAN roles into ::CPANDistributions
          - Added ::TraitFor::DeletingFromCPAN

0.14.3    2013-05-11 22:25:05
          - Improved guess work in PrereqDiffs
          - Added ::TraitFor::UploadingToCPAN
          - Added ::TraitFor::PrereqDifferences

0.13.4    2013-05-11 04:12:04
          - Updated POD
          - Added _should_add_tag to ::VCS
          - Updated POD, added mission use statement
          - Added release tagging and version number prompting

0.12.7    2013-05-10 21:47:56
          - Uses fullname, logname, and loginid from C:U:Functions
          - Added osname output to 01always_pass.t
          - Added chdir public method in ::Base
          - Improved SVN detection logic
          - Modify appldir builder if creating a dist
          - Avoid calling getpwuid on WinShite
          - Added missing dependencies

0.11.1    2013-05-04 21:21:14
          - Mitigated problems with branches
          - inc::Bob gets better git remote detection
          - Attribute refactoring and POD updates

0.10.1    2013-05-04 01:05:42
          - Fixed author_id attribute
          - Created ::Config to allow attributes from config file

0.9.10    2013-05-03 20:42:32
          - Added edit_project and show_tab_title methods