@@ -1,9 +1,9 @@
-# @(#)Ident: VCS.pm 2013-06-28 19:43 pjf ;
+# @(#)Ident: VCS.pm 2013-06-28 21:41 pjf ;
 
 package Module::Provision::TraitFor::VCS;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.17.%d', q$Rev: 6 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.17.%d', q$Rev: 7 $ =~ /\d+/gmx );
 
 use Class::Usul::Constants;
 use Class::Usul::Functions  qw( is_win32 throw );
@@ -13,7 +13,7 @@ use Perl::Version;
 use Unexpected::Types       qw( Bool );
 
 requires qw( add_leader appbase appldir branch chdir config
-             default_branch_for_vcs dist_version distname editor
+             default_branch dist_version distname editor
              exec_perms get_line loc output quiet run_cmd vcs );
 
 # Public attributes
@@ -77,11 +77,10 @@ sub get_emacs_state_file_path {
 }
 
 sub set_branch : method {
-   my $self = shift; my $bfile = $self->appbase->catfile( '.branch' );
+   my $self = shift; my $bfile = $self->branch_file;
 
    my $old_branch = $self->branch;
-   my $new_branch = shift @{ $self->extra_argv }
-                 || $self->default_branch_for_vcs;
+   my $new_branch = shift @{ $self->extra_argv } || $self->default_branch;
 
    not $new_branch and $bfile->exists and $bfile->unlink and return OK;
        $new_branch and $bfile->println( $new_branch );
@@ -323,7 +322,7 @@ Module::Provision::TraitFor::VCS - Version Control
 
 =head1 Version
 
-This documents version v0.17.$Rev: 6 $ of L<Module::Provision::TraitFor::VCS>
+This documents version v0.17.$Rev: 7 $ of L<Module::Provision::TraitFor::VCS>
 
 =head1 Description
 
